# SP2024-2D-Platformer

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  TODO.md
src/: camera.cpp  hudhair.cpp  hudhair.hpp  josh_b.cpp  josh_b.hpp  luc.cpp  luc.hpp  main.cpp  main.hpp  menu.cpp  platform.cpp  player.cpp  player.hpp  tyler.cpp  tyler.hpp
src/components/: Ground.cpp  Ground.hpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp
src/scene/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  README.md
src/scene/components/: Transform.cpp  Transform.hpp
src/scene/components/renderables/: ShapeRenderable.cpp  ShapeRenderable.hpp
src/scene/renderers/: ShapeRenderer.cpp  ShapeRenderer.hpp
wintools/: README.md  install-env.bat  install-env.ps1  uninstall-env.bat  uninstall-env.ps1
